--- a/index.html
+++ b/index.html
@@ -83,7 +83,36 @@
     <div class="container">
       <h2>Our Packages</h2>
       <div class="carousel">
-        <!-- Cards for packages go here -->
+        <!-- Packages View -->
+<div id="packages" class="view">
+  <div class="container">
+    <h2>Our Packages</h2>
+    <div class="carousel" style="display: flex; gap: 1rem; overflow-x: auto; scroll-snap-type: x mandatory; padding: 1rem 0;">
+      
+      <!-- Package 1 -->
+      <div class="card" style="min-width: 250px; flex: 0 0 auto; scroll-snap-align: start; border: 1px solid #ccc; border-radius: 10px; padding: 1rem; background: white;">
+        <h3>Sunset Romance</h3>
+        <p>Perfect for couples. Includes cozy seating, candlelight, and chilled drinks.</p>
+        <strong>$250</strong>
+      </div>
+
+      <!-- Package 2 -->
+      <div class="card" style="min-width: 250px; flex: 0 0 auto; scroll-snap-align: start; border: 1px solid #ccc; border-radius: 10px; padding: 1rem; background: white;">
+        <h3>Family Picnic</h3>
+        <p>Great for small families. Includes snacks, games, and beach blankets.</p>
+        <strong>$300</strong>
+      </div>
+
+      <!-- Package 3 -->
+      <div class="card" style="min-width: 250px; flex: 0 0 auto; scroll-snap-align: start; border: 1px solid #ccc; border-radius: 10px; padding: 1rem; background: white;">
+        <h3>Boho Celebration</h3>
+        <p>Styled for birthdays or proposals. Includes full decor & custom touches.</p>
+        <strong>$400</strong>
+      </div>
+
+    </div>
+  </div>
+</div>!
       </div>
     </div>
   </div>
