--- a/index.html
+++ b/index.html
@@ -79,18 +79,15 @@
   </div>
 
   <!-- Packages View -->
-  <div id="packages" class="view">
-    <div class="container">
-      <h2>Our Packages</h2>
-      <div class="carousel">
-        <!-- Packages View -->
 <div id="packages" class="view">
   <div class="container">
+    <img src="assets/AlohaHoohiki.png" alt="Aloha Hoohiki">
     <h2>Our Packages</h2>
     <div class="carousel" style="display: flex; gap: 1rem; overflow-x: auto; scroll-snap-type: x mandatory; padding: 1rem 0;">
       
       <!-- Package 1 -->
       <div class="card" style="min-width: 250px; flex: 0 0 auto; scroll-snap-align: start; border: 1px solid #ccc; border-radius: 10px; padding: 1rem; background: white;">
+        <img src="assets/night400x250.jpg" alt="Romanic Night">
         <h3>Sunset Romance</h3>
         <p>Perfect for couples. Includes cozy seating, candlelight, and chilled drinks.</p>
         <strong>$250</strong>
@@ -98,6 +95,7 @@
 
       <!-- Package 2 -->
       <div class="card" style="min-width: 250px; flex: 0 0 auto; scroll-snap-align: start; border: 1px solid #ccc; border-radius: 10px; padding: 1rem; background: white;">
+        <img src="assets/AlohaMalama250x300.jpg" alt="Aloha Malama">
         <h3>Family Picnic</h3>
         <p>Great for small families. Includes snacks, games, and beach blankets.</p>
         <strong>$300</strong>
@@ -105,17 +103,14 @@
 
       <!-- Package 3 -->
       <div class="card" style="min-width: 250px; flex: 0 0 auto; scroll-snap-align: start; border: 1px solid #ccc; border-radius: 10px; padding: 1rem; background: white;">
+        <img src="assets/bdaycropped.jpg" alt="Birthday parties">
         <h3>Boho Celebration</h3>
         <p>Styled for birthdays or proposals. Includes full decor & custom touches.</p>
         <strong>$400</strong>
       </div>
-
-    </div>
+      </div>
   </div>
 </div>
-      </div>
-    </div>
-  </div>
 
   <!-- Booking View -->
   <div id="booking" class="view">
