--- a/index.html
+++ b/index.html
@@ -91,116 +91,76 @@
       -webkit-overflow-scrolling: touch;
     ">
       
-      <!-- Package 1 -->
+<!-- Package Template -->
       <div class="card" style="
-        min-width: 250px;
+        min-width: 280px;
+        max-width: 320px;
         flex: 0 0 auto;
         scroll-snap-align: start;
         border: 1px solid #ccc;
-        border-radius: 10px;
+        border-radius: 12px;
         padding: 1rem;
         background: white;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       ">
         <img src="assets/night400x250.jpg" alt="Pilina Picnic" loading="lazy" style="
           width: 100%;
-          height: 180px;
+          height: 250px;
           object-fit: cover;
           border-radius: 8px;
         ">
         <h3>Pilina Picnic – A Love Story Under the Stars</h3>
         <strong>Starting at $299</strong>
         <p>
-          Step into a dreamy escape where presence and connection take center stage. Beneath swaying palms and the warm glow of candlelight, this <strong>boho-Hawaiian setup</strong> blends tropical charm with cozy elegance, creating the perfect space for love to unfold.<br>  
-          💛 <strong>A lush island-inspired setup with woven textures & soft florals</strong><br>
-          💛 <strong>Gourmet grazing board & chilled beverages</strong><br>
-          💛 <strong>Sunset glow, or candlelit ambiance</strong><br><br>
+          Step into a dreamy escape where presence and connection take center stage. Beneath swaying palms and the warm glow of candlelight, this boho-Hawaiian setup blends tropical charm with cozy elegance, creating the perfect space for love to unfold.<br><br>
+          💛 <strong>Woven textures & soft florals</strong><br>
+          💛 <strong>Gourmet grazing board & chilled drinks</strong><br>
+          💛 <strong>Sunset or candlelit ambiance</strong><br><br>
           Where love is felt, and memories are created.
         </p>
       </div>
 
-      <!-- Package 2 -->
-      <div class="card" style="
-        min-width: 250px;
-        flex: 0 0 auto;
-        scroll-snap-align: start;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        padding: 1rem;
-        background: white;
-      ">
-        <img src="assets/AlohaMalama250x300.jpg" alt="Aloha Malama" loading="lazy" style="
-          width: 100%;
-          height: 180px;
-          object-fit: cover;
-          border-radius: 8px;
-        ">
+      <div class="card" style="min-width: 280px; max-width: 320px; flex: 0 0 auto; scroll-snap-align: start; border: 1px solid #ccc; border-radius: 12px; padding: 1rem; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+        <img src="assets/AlohaMalama250x300.jpg" alt="Aloha Malama" loading="lazy" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px;">
         <h3>Aloha Mālama – Gather, Connect, Cherish</h3>
         <strong>Starting at $399</strong>
         <p>
-          There’s nothing like being fully present with your favorite people—sharing laughter, stories, and carefree moments. This <strong>Touch of Paradise experience</strong> is designed to celebrate deep connections in a setting infused with warmth and vibe.<br>  
-          🌿 <strong>Boho-meets-island luxe setup with tropical florals & rattan accents</strong><br>
-          🌿 <strong>Ono (delicious) grazing board & refreshing island drinks</strong><br>
-          🌿 <strong>Lei greetings & heartfelt Hawaiian blessing</strong><br><br>
+          There’s nothing like being fully present with your favorite people—sharing laughter, stories, and carefree moments. This **Touch of Paradise experience** is designed to celebrate deep connections in a setting infused with warmth and vibe. <br><br>
+          🌿 <strong>Tropical florals & rattan accents</strong><br>
+          🌿 <strong>Island drinks & ono grazing board</strong><br>
+          🌿 <strong>Lei greetings & Hawaiian blessing</strong><br><br>
           Where aloha is felt, and memories are mālama’d forever.
         </p>
       </div>
 
-      <!-- Package 3 -->
-      <div class="card" style="
-        min-width: 250px;
-        flex: 0 0 auto;
-        scroll-snap-align: start;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        padding: 1rem;
-        background: white;
-      ">
-        <img src="assets/twoplatesdusk800x600.jpg" alt="Aloha Hoʻohiki" loading="lazy" style="
-          width: 100%;
-          height: 180px;
-          object-fit: cover;
-          border-radius: 8px;
-        ">
+      <div class="card" style="min-width: 280px; max-width: 320px; flex: 0 0 auto; scroll-snap-align: start; border: 1px solid #ccc; border-radius: 12px; padding: 1rem; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+        <img src="assets/twoplatesdusk800x600.jpg" alt="Aloha Hoʻohiki" loading="lazy" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px;">
         <h3>Aloha Hoʻohiki – Promise of Love</h3>
         <strong>Starting at $549</strong>
         <p>
-          This is more than just a proposal—it’s the start of forever. Imagine stepping into a scene designed for pure magic, where every detail is crafted to reflect your love story. This <strong>Touch of Paradise experience</strong> creates a moment so <strong>unforgettable, so deeply felt</strong>, that it lingers in your hearts forever.<br>  
-          💍 <strong>Romantic beachfront or garden setup with soft candlelight & tropical blooms</strong><br>
-          💍 <strong>Lei exchange to symbolize your journey together</strong><br>
-          💍 <strong>Custom grazing board & champagne toast</strong><br>
-          💍 <strong>Hidden message reveal or “Will You Marry Me?” woven into the setup</strong><br>
-          💍 <strong>Private musician to add extra enchantment</strong><br><br>
+          This is more than just a proposal—it’s the start of forever. Imagine stepping into a scene designed for pure magic, where every detail is crafted to reflect your love story. This **Touch of Paradise experience** creates a moment so **unforgettable, so deeply felt**, that it lingers in your hearts forever. <br><br>
+          💍 <strong>Beach or garden candlelit setup</strong><br>
+          💍 <strong>Champagne toast & custom board</strong><br>
+          💍 <strong>Musician + proposal reveal</strong><br><br>
           Where love is honored, and your future begins.
         </p>
       </div>
 
-      <!-- Package 4 -->
-      <div class="card" style="
-        min-width: 250px;
-        flex: 0 0 auto;
-        scroll-snap-align: start;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        padding: 1rem;
-        background: white;
-      ">
-        <img src="assets/bdaycropped.jpg" alt="Custom Group Event" loading="lazy" style="
-          width: 100%;
-          height: 180px;
-          object-fit: cover;
-          border-radius: 8px;
-        ">
+      <div class="card" style="min-width: 280px; max-width: 320px; flex: 0 0 auto; scroll-snap-align: start; border: 1px solid #ccc; border-radius: 12px; padding: 1rem; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+        <img src="assets/bdaycropped.jpg" alt="Custom Group Event" loading="lazy" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px;">
         <h3>Custom Group Event</h3>
         <strong>Starting at $649</strong>
         <p>
-          ✨ Need a <strong>picnic for a bigger group, team building, birthday party, baby shower, or a fully personalized experience?</strong><br>
-          Let's create something magical together! <strong>Contact me directly</strong> for custom options.
+          ✨ Planning a picnic for a group, team building, or celebration?<br><br>
+          Let's co-create your perfect day.<br><br>
+          <strong>Contact us for custom options.</strong>
         </p>
       </div>
 
     </div>
   </div>
 </div>
+
 
   <!-- Booking View -->
   <div id="booking" class="view">
