--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Touch of Paradise Picnics</title>
   <meta name="theme-color" content="#007aff">
   <link rel="icon" href="icons/icon-192.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon-180.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/icon-152.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/icon-120.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/icon-76.png">
+
   <link rel="manifest" href="manifest.json">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -103,9 +108,9 @@
   </style>
 </head>
 <body>
+  <button id="installBtn">Install App</button>
   <!-- Home View -->
   <div id="home" class="view active">
-    <button id="installBtn">Install App</button>
     <div>
       <h1>Touch of Paradise Picnics</h1>
       <p>Step into a world of magic and ambiance with a curated setup that goes beyond a picnic—it’s a personalized touch of paradise. Enjoy cozy seating, styled tablescape, ambient music, and a vibe infused with aloha.</p>
